my-custom-python-exporter/manifest/pod.yaml
kind: Pod 
apiVersion: v1 
metadata:
  name: sre-docker-hcp
spec:
  containers:
    - name: sre-docker-hcp
      image: sre-docker-hcp:0.2
