my-custom-python-exporter/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __PROJECT_NAME__
  namespace: cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: __PROJECT_NAME__
  template:
    metadata:
      labels:
        app: __PROJECT_NAME__
    spec:
      containers:
        - name: __PROJECT_NAME__
          image: docker-external.repo.devops.poalim.bank/sre-tools/__PROJECT_NAME__:__PROJECT_TAG__
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            httpGet:
              path: /
              port: 5000
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            httpGet:
              path: /
              port: 5000
            timeoutSeconds: 1
          ports:
          - containerPort: 5000
          resources:
            limits:
              cpu: 1
              memory: 3Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
---
kind: Service
apiVersion: v1
metadata:
  name: __PROJECT_NAME__-srv
  namespace: cloud
  labels:
    app: __PROJECT_NAME__
spec:
  type: ClusterIP
  selector:
    app: __PROJECT_NAME__
  ports:
  - name: app
    port: 5000
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: __PROJECT_NAME__
  namespace: cloud
spec:
  to:
    kind: Service
    name: __PROJECT_NAME__-srv
  port:
    targetPort: app    
  tls:
    termination: edge
